--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #c18caf; }
+  background: #e3bf2c; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #7ea871; }
+  background: #234320; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #d9047c; }
+  background: #ebda28; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #d392fd; }
+  background: #aa624f; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #732159; }
+  background: #34891b; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #9566a7; }
+  background: #ab56e9; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #09854f; }
+  background: #fdb5a8; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #ad033d; }
+  background: #cd1c11; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #7db8a5; }
+  background: #8dad8d; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #de3cb0; }
+  background: #119a3b; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #5c67f2; }
+  background: #55c2ce; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #b74cd3; }
+  background: #61f638; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #61c6f8; }
+  background: #f6c256; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #6d01d5; }
+  background: #ea5a1d; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #ee97b4; }
+  background: #748a54; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #5da6c0; }
+  background: #3503fe; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #a950f5; }
+  background: #1cfff3; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #fbb137; }
+  background: #4eed17; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #2e3c80; }
+  background: #4a169a; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #75106e; }
+  background: #84beb5; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #897dc1; }
+  background: #9c0164; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #7ca820; }
+  background: #dbc933; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #c27f3a; }
+  background: #4845cc; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #4a0b69; }
+  background: #2d5336; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #e08e98; }
+  background: #e591e1; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #d57b7b; }
+  background: #1e34cc; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #c62ad8; }
+  background: #7466c0; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #aece47; }
+  background: #fd400a; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #cae12f; }
+  background: #16bb64; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #3563cf; }
+  background: #4b5abe; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #7d8870; }
+  background: #a61735; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #e3242f; }
+  background: #baa89c; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #da2ec5; }
+  background: #24d2e7; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #743650; }
+  background: #cd8f83; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #084eff; }
+  background: #832566; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #91d3e5; }
+  background: #a1ab2f; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #c4184c; }
+  background: #94baf8; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #5fc2ab; }
+  background: #c649a5; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #7a6439; }
+  background: #179076; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #337004; }
+  background: #9c237a; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #2d0f30; }
+  background: #bd2d01; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #de26db; }
+  background: #3e1ed8; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #b7028b; }
+  background: #ff11ae; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #d7b6a7; }
+  background: #1f4886; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #828d0e; }
+  background: #384b58; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #21102d; }
+  background: #775870; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #fb217f; }
+  background: #3952b7; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #836864; }
+  background: #9aab79; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #bb8f35; }
+  background: #85b4c0; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #566f93; }
+  background: #23d8e4; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #7c6354; }
+  background: #656d8d; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #4623cf; }
+  background: #0dc1d1; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #45bd9e; }
+  background: #35aeeb; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #34a8c9; }
+  background: #600e77; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #fdd798; }
+  background: #4ed6c5; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #c35504; }
+  background: #bb411b; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #92ee8a; }
+  background: #ada3a6; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #d01b77; }
+  background: #c626f3; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #e10f69; }
+  background: #9161cf; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #a825e6; }
+  background: #f506f3; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #311331; }
+  background: #16d61f; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #3c40a6; }
+  background: #1b43d4; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #d2cd57; }
+  background: #cfeff2; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #aba2b7; }
+  background: #802359; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #906243; }
+  background: #72ad74; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #4cd724; }
+  background: #cf4993; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #374026; }
+  background: #7e1fbc; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #313949; }
+  background: #3f2e22; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #521c3d; }
+  background: #4f5df3; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #f5a373; }
+  background: #369c54; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #3ae5a0; }
+  background: #50d7b2; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #256106; }
+  background: #46d71d; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #ab36ab; }
+  background: #2686dd; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #95914c; }
+  background: #b6e877; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #1c18b8; }
+  background: #180c19; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #5b4a16; }
+  background: #d46890; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #c7caa1; }
+  background: #c83766; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #3a4079; }
+  background: #513440; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #8d7556; }
+  background: #ba70af; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #ab52bc; }
+  background: #74e993; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #410fca; }
+  background: #cd0e05; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #7d1756; }
+  background: #4d4532; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #f128db; }
+  background: #7007a0; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #334b60; }
+  background: #466d59; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #b8b5ab; }
+  background: #1b1967; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #82a6d8; }
+  background: #518d09; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #f84ab1; }
+  background: #af88fd; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #c31ea8; }
+  background: #fc0d7f; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #ed474c; }
+  background: #69906c; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #e30e16; }
+  background: #6c45fb; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #0fc462; }
+  background: #af7c8b; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #39b265; }
+  background: #97d73b; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #7708b0; }
+  background: #f034af; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #707dae; }
+  background: #2e276d; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #bf2525; }
+  background: #38fc23; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #e2fedf; }
+  background: #ab89d2; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #9095e4; }
+  background: #946939; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #228466; }
+  background: #d8a946; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #7ed109; }
+  background: #16c5b1; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #a338dd; }
+  background: #9cb403; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12961,6 +12961,7 @@ table .parent-row,
   border: 1px solid #cdcdd6;
   border-top: 0px solid #cdcdd6;
   padding: 15px;
+  padding-right: 5px;
   position: relative;
   overflow: hidden; }
 
@@ -13332,8 +13333,9 @@ table .parent-row,
   .view-boxs-wrapper {
     width: 100%;
     margin-top: 20px; }
-    .view-boxs-wrapper .view-box {
-      max-width: 100%; } }
+
+  .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper .view-box {
+    max-width: 100% !important; } }
 /*767 screen end here*/
 /*768 to 1023 screen css*/
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
@@ -13346,7 +13348,16 @@ table .parent-row,
   .modal-add-connections-wrapper .choose-file-modal {
     margin-left: 15px; }
   .modal-add-connections-wrapper .region-checkbox {
-    padding: 0px !important; } }
+    padding: 0px !important; }
+
+  .list-view-hover-wrapper .content-wrapper {
+    flex-direction: column; }
+    .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper {
+      display: flex;
+      flex-direction: column;
+      margin-top: 25px; }
+      .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper .view-box {
+        max-width: 100%; } }
 @media only screen and (min-width: 320px) and (max-width: 1023px) {
   .query-wizard-exp-contents {
     overflow-x: auto; }
