--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -2706,6 +2706,7 @@ table .parent-row,
   border: 1px solid #cdcdd6;
   border-top: 0px solid #cdcdd6;
   padding: 15px;
+  padding-right: 5px;
   position: relative;
   overflow: hidden;
 }
