--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #e3bf2c; }
+  background: #711b64; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #234320; }
+  background: #36d5cf; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #ebda28; }
+  background: #3720be; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #aa624f; }
+  background: #9d3caf; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #34891b; }
+  background: #c30d81; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #ab56e9; }
+  background: #9ec2c6; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #fdb5a8; }
+  background: #7840a9; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #cd1c11; }
+  background: #5dc755; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #8dad8d; }
+  background: #734922; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #119a3b; }
+  background: #833b0e; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #55c2ce; }
+  background: #3c230f; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #61f638; }
+  background: #16079a; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #f6c256; }
+  background: #a1af3c; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #ea5a1d; }
+  background: #83d32c; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #748a54; }
+  background: #213f91; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #3503fe; }
+  background: #5a1f66; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #1cfff3; }
+  background: #a8fca9; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #4eed17; }
+  background: #2a362a; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #4a169a; }
+  background: #12db0e; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #84beb5; }
+  background: #9512eb; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #9c0164; }
+  background: #76aa86; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #dbc933; }
+  background: #b38449; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #4845cc; }
+  background: #dac28d; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #2d5336; }
+  background: #16a458; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #e591e1; }
+  background: #8559ba; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #1e34cc; }
+  background: #55f1fd; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #7466c0; }
+  background: #22a4f2; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #fd400a; }
+  background: #f66aee; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #16bb64; }
+  background: #d63518; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #4b5abe; }
+  background: #8df1b3; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #a61735; }
+  background: #2f36c9; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #baa89c; }
+  background: #d2bea5; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #24d2e7; }
+  background: #993cce; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #cd8f83; }
+  background: #118898; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #832566; }
+  background: #84f146; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #a1ab2f; }
+  background: #c48c34; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #94baf8; }
+  background: #2b888a; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #c649a5; }
+  background: #ef2318; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #179076; }
+  background: #3f1ada; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #9c237a; }
+  background: #18f74a; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #bd2d01; }
+  background: #9c5c7f; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #3e1ed8; }
+  background: #f38989; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #ff11ae; }
+  background: #7e50a4; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #1f4886; }
+  background: #32eaba; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #384b58; }
+  background: #a9ae34; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #775870; }
+  background: #ed9ae3; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #3952b7; }
+  background: #614596; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #9aab79; }
+  background: #6b19d6; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #85b4c0; }
+  background: #c567b8; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #23d8e4; }
+  background: #32ab51; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #656d8d; }
+  background: #c20f40; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #0dc1d1; }
+  background: #2c8178; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #35aeeb; }
+  background: #777c75; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #600e77; }
+  background: #845969; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #4ed6c5; }
+  background: #9badaf; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #bb411b; }
+  background: #9e4001; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #ada3a6; }
+  background: #75993a; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #c626f3; }
+  background: #cce673; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #9161cf; }
+  background: #beebb0; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #f506f3; }
+  background: #801ab2; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #16d61f; }
+  background: #4d2c94; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #1b43d4; }
+  background: #9db13f; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #cfeff2; }
+  background: #487f4f; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #802359; }
+  background: #d265b1; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #72ad74; }
+  background: #4c8a30; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #cf4993; }
+  background: #551830; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #7e1fbc; }
+  background: #76bee2; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #3f2e22; }
+  background: #2a6013; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #4f5df3; }
+  background: #5bcc4c; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #369c54; }
+  background: #d91206; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #50d7b2; }
+  background: #94c362; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #46d71d; }
+  background: #705845; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #2686dd; }
+  background: #f5e009; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #b6e877; }
+  background: #0d04e2; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #180c19; }
+  background: #85e420; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #d46890; }
+  background: #565a81; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #c83766; }
+  background: #6daf12; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #513440; }
+  background: #344cfc; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #ba70af; }
+  background: #56025e; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #74e993; }
+  background: #766b0d; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #cd0e05; }
+  background: #3d56dc; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #4d4532; }
+  background: #5817b0; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #7007a0; }
+  background: #b72039; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #466d59; }
+  background: #c66b34; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #1b1967; }
+  background: #c82504; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #518d09; }
+  background: #91ea9e; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #af88fd; }
+  background: #7a0b86; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #fc0d7f; }
+  background: #b0f04c; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #69906c; }
+  background: #e75b67; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #6c45fb; }
+  background: #bb0b5f; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #af7c8b; }
+  background: #12bc1a; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #97d73b; }
+  background: #870ba4; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #f034af; }
+  background: #9c1246; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #2e276d; }
+  background: #54d3a2; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #38fc23; }
+  background: #862729; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #ab89d2; }
+  background: #9027d1; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #946939; }
+  background: #ef111a; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #d8a946; }
+  background: #c1a242; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #16c5b1; }
+  background: #6a58cc; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #9cb403; }
+  background: #515548; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12962,6 +12962,7 @@ table .parent-row,
   border-top: 0px solid #cdcdd6;
   padding: 15px;
   padding-right: 5px;
+  padding-top: 5px;
   position: relative;
   overflow: hidden; }
 
