--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -2707,6 +2707,7 @@ table .parent-row,
   border-top: 0px solid #cdcdd6;
   padding: 15px;
   padding-right: 5px;
+  padding-top: 5px;
   position: relative;
   overflow: hidden;
 }
